Unreviewed, jitdump file name gets broken from 303755@main https://bugs.webkit.org/show_bug.cgi?id=303594 rdar://165883884

* Source/JavaScriptCore/assembler/PerfLog.cpp:
(JSC::PerfLog::PerfLog):

Canonical link: https://commits.webkit.org/303949@main